kubernetes/apps/gateway-api/app/cloudflare-tunnel.gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: &name cloudflare-tunnel
spec:
  gatewayClassName: *name
  listeners:
    - name: http-wildcard
      port: 80
      protocol: HTTP
      hostname: "*.${IDVN_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: cnpg # check bcs seem that it only support httproute
      port: 5432
      protocol: TCP
      allowedRoutes:
        kinds:
          - kind: TCPRoute
