kubernetes/apps/gateway-api/app/idvn.private.gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-idvn-private
spec:
  gatewayClassName: idvn-cloudflare
  listeners:
    - name: http-wildcard
      port: 80
      protocol: HTTP
      hostname: "*.${IDVN_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: cnpg
      port: 5432
      protocol: TCP
      allowedRoutes:
        kinds:
          - kind: TCPRoute
