kubernetes/apps/gateway-api/app/idvn.public.gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-idvn-public
  annotations:
    cert-manager.io/cluster-issuer: idvn-cluster-issuer-prod
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: ${IDVN_DOMAIN}
      external-dns.alpha.kubernetes.io/access: public
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: ${IDVN_DOMAIN}
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: ${IDVN_DOMAIN}
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: idvn-tls
    - name: http-wildcard
      port: 80
      protocol: HTTP
      hostname: "*.${IDVN_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-wildcard
      port: 443
      protocol: HTTPS
      hostname: "*.${IDVN_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: idvn-tls
    - name: 8080-https-wildcard
      port: 8080
      protocol: HTTP
      hostname: "*.${IDVN_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: idvn-tls
